--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,8 +109,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     //navigation
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-rc02'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc02'
-    implementation 'androidx.navigation:navigation-ui:2.2.0-rc02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc02'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-ui:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
+
+    implementation "androidx.preference:preference-ktx:1.1.0"
 }
