--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'javax.inject:javax.inject:1'
 }
 
 sourceCompatibility = "8"
