--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,13 +39,13 @@ dependencies {
 
     //okHttp
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    api 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    api 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     //gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    api 'com.google.code.gson:gson:2.8.6'
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
@@ -54,7 +54,5 @@ dependencies {
 
     //dagger
     implementation 'com.google.dagger:dagger:2.25.2'
-    implementation 'com.google.dagger:dagger-android:2.25.2'
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
-    kapt 'com.google.dagger:dagger-android-processor:2.25.2'
 }
