--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -119,6 +119,10 @@ dependencies {
 
     //dagger
     implementation 'com.google.dagger:dagger-android-support:2.25.2'
+    implementation 'com.google.dagger:dagger:2.25.2'
+    implementation 'com.google.dagger:dagger-android:2.25.2'
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.25.2'
 
 //    implementation "androidx.preference:preference-ktx:1.1.0"
 }
