--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,7 +4,10 @@ apply plugin: 'kotlin'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'javax.inject:javax.inject:1'
+
+    testImplementation 'junit:junit:4.12'
 }
 
 sourceCompatibility = "8"
