--- a/data/build.gradle
+++ b/data/build.gradle
@@ -25,6 +25,11 @@ android {
         }
     }
 
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -38,8 +43,10 @@ dependencies {
     implementation 'org.koin:koin-android:2.0.1'
 
     //okHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    api 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
+    api 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.3.1")
+
     //retrofit
     api 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
@@ -47,12 +54,24 @@ dependencies {
     //gson
     api 'com.google.code.gson:gson:2.8.6'
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
 
     implementation "androidx.preference:preference-ktx:1.1.0"
 
     //dagger
     implementation 'com.google.dagger:dagger:2.25.2'
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    kaptTest 'com.google.dagger:dagger-compiler:2.25.2'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.25.2'
+
+    testImplementation 'org.robolectric:robolectric:4.3'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.27.0'
+    testImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
