--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -76,6 +76,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -95,19 +98,6 @@ dependencies {
     //koin
 //    implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-android-viewmodel:2.0.1'
-
-//    //okHttp
-//    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-//    //retrofit
-//    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-//    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
-//    //gson
-//    implementation 'com.google.code.gson:gson:2.8.6'
-//    //coroutines
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
@@ -124,5 +114,9 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
     kapt 'com.google.dagger:dagger-android-processor:2.25.2'
 
-//    implementation "androidx.preference:preference-ktx:1.1.0"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.27.0"
+    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
 }
