--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -97,7 +97,7 @@ dependencies {
 
     //koin
 //    implementation 'org.koin:koin-android:2.0.1'
-    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+//    implementation 'org.koin:koin-android-viewmodel:2.0.1'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
