--- a/data/build.gradle
+++ b/data/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
 
 
     defaultConfig {
@@ -35,7 +35,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
 
     implementation project(':domain')
 
@@ -43,8 +43,8 @@ dependencies {
     //implementation 'org.koin:koin-android:2.0.1'
 
     //okHttp
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
-    api 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     testImplementation("com.squareup.okhttp3:mockwebserver:4.3.1")
 
     //retrofit
@@ -84,4 +84,8 @@ dependencies {
     androidTestImplementation 'net.bytebuddy:byte-buddy:1.9.10'
     androidTestImplementation 'net.bytebuddy:byte-buddy-android:1.9.10'
     androidTestImplementation 'net.bytebuddy:byte-buddy-agent:1.9.10'
+
+    //rxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
 }
