--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'javax.inject:javax.inject:1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
 
     testImplementation 'junit:junit:4.12'
 }
