--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.mobile.moviedatabase"
         minSdkVersion 21
@@ -89,11 +89,13 @@ dependencies {
     implementation project(':data')
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+    implementation 'androidx.paging:paging-runtime:2.1.1'
 
     //koin
 //    implementation 'org.koin:koin-android:2.0.1'
@@ -102,10 +104,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     //navigation
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-rc04'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc04'
-    implementation 'androidx.navigation:navigation-ui:2.2.0-rc04'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc04'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-ui:2.2.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
     //dagger
     implementation 'com.google.dagger:dagger-android-support:2.25.2'
@@ -114,6 +116,9 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
     kapt 'com.google.dagger:dagger-android-processor:2.25.2'
 
+    //rxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.27.0"
