--- a/data/build.gradle
+++ b/data/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
     //gson
     api 'com.google.code.gson:gson:2.8.6'
     //coroutines
