--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /captures
 .externalNativeBuild
 .cxx
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
